k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: watchbiz
  labels:
    name: watchbiz
    environment: production
